# Macaroni

./: .gitignore  .gitmodules  .travis.yml  Build.rst  DeleteThis.txt  README.md  README.txt  ReadyEnvironment.bat  RunUnitTests.bat  Vagrantfile  appveyor.yml  bugs.html  build.bat  download.html  footer.html  header.html  index.html  macaroni.css  manifest.lua  mrun.bat  mrun.sh  notes.txt  project.lua  tests.txt  topbar.html
Main/App/: .gitignore  App.vcproj  Build.bat  Build.sh  BuildRelease.bat  CMakeLists.txt  Move-this-to-Generated-dir-build.jam  QuickBuild-Gcc.bat  QuickBuild-MSVC.bat  QuickBuild.bat  UnitTests.bat  conanfile.py  jamroot.jam  manifest.lua  project.lua
Main/App/Source/: MacaroniHFile.deuser  Messages.txt
Main/App/Source/Generators/: Dumb.lua
Main/App/Source/Generators/Cpp/: DependencyList.lua  DependencySection.lua  NamespaceHFileGenerator.lua
Main/App/Source/Libraries/Macaroni/Boost-regex/1.42.0/: manifest-final.lua
Main/App/Source/Libraries/Macaroni/Boost-smart_ptr/1.42.0/: manifest-final.lua
Main/App/Source/Libraries/Macaroni/CppStd/2003/: manifest-final.lua
Main/App/Source/main/lua/: About.lua  CheckModel.lua  JamGenerator.lua  LightDefinitions.lua  Main.lua  ReplCommand.lua  VersionInfoGenerator.lua  doodlebug.lua
Main/App/Source/main/mcpp/: Main.cpp  Main.mcpp
Main/App/Source/main/mcpp/Macaroni/: AppPaths.mcpp  Containers.h  Dependencies.mcpp  Exception.cpp  Exception.h  Exception.mcpp  InternalSource.mcpp  LuaCompat.h  LuaGlue.hpp  LuaGlue2.hpp  ME.h  MemoryBlob.h  StringException.mcpp
Main/App/Source/main/mcpp/Macaroni/CmdLine/: CmdLineOption.mcpp
Main/App/Source/main/mcpp/Macaroni/Core/: Hash.mcpp  SmartPointee.mcpp  Visitor.mcpp
Main/App/Source/main/mcpp/Macaroni/Doc/: MDocParser.mcpp
Main/App/Source/main/mcpp/Macaroni/Environment/: ClassicPlugin.mcpp  Console.h  Console.mcpp  DebugLog.h  DebugLogC.h  Environment.mcpp  Input.mcpp  LuaEnvironment.cpp  LuaEnvironment.h  LuaEnvironment.mcpp  MacaroniEnvironment.hpp  Messages.cpp  Messages.h  Messages.mcpp  MessagesLua.cpp  MessagesLua.h  Output.mcpp  OutputPtr.h  PlatformConsole.mcpp  Plugin.mcpp  PluginFactory.mcpp  Process.cpp  Process.h  ProjectEnvironment.mcpp  ProjectEnvironmentPtr.mcpp  ProjectLoader.mcpp  ProjectLoaderMarker.mcpp  ProjectLoaderPtr.mcpp  RegisterInternalModules.cpp  StringPair.h  Table.mcpp  Timer.mcpp
Main/App/Source/main/mcpp/Macaroni/Environment/Values/: Basic.mcpp  CustomValues.mcpp  Values.mcpp
Main/App/Source/main/mcpp/Macaroni/Exception/: Exceptions.mcpp
Main/App/Source/main/mcpp/Macaroni/Generator/: CppSourceGenerator2.h  DebugEnumerator.cpp  DebugEnumerator.h  DynamicGeneratorRunner.mcpp
Main/App/Source/main/mcpp/Macaroni/Generator/Lua/: DynamicGenerator.cpp  DynamicGenerator.h  DynamicInstaller.cpp  DynamicInstaller.h  DynamicScriptRunner.cpp  DynamicScriptRunner.h
Main/App/Source/main/mcpp/Macaroni/Generators/: CMake.mcpp  README.rst
Main/App/Source/main/mcpp/Macaroni/Generators/Cpp/: BlockDependency.mcpp  CodeDependency.mcpp  CodeGraph.mcpp  CodeText.mcpp  CodeTextProducer.mcpp  CodeTextSorter.mcpp  CodeType.mcpp  CppFileWriter.mcpp  CppGenExceptions.mcpp  CppGenerator.mcpp  DeppySection.mcpp  ElementBlock.mcpp  ElementCodeType.mcpp  GeneratorSettings.mcpp
Main/App/Source/main/mcpp/Macaroni/IO/: FileNotFoundException.h  FileSet.cpp  FileSet.h  FileSet.mcpp  FileSet_Iterator.cpp  GeneratedFileWriter.mcpp  GeneratedFileWriterLuaMetaData.cpp  Path.cpp  Path.h  PathLua.cpp  PathLua.h  PathResolver.cpp  PathResolver.h  Paths.cpp  Paths.h  Paths.mcpp  RegexFileSet.mcpp  SimpleFileSet.mcpp  UniquePathList.mcpp
Main/App/Source/main/mcpp/Macaroni/Model/: Annotation.mcpp  AnnotationDefinition.cpp  AnnotationDefinition.h  AnnotationDefinitionPtr.h  AnnotationList.h  AnnotationTable.cpp  AnnotationTable.h  AnnotationTableLua.cpp  AnnotationTableLua.h  AnnotationTablePtr.h  AnnotationValue.cpp  AnnotationValue.h  AnnotationValueLua.cpp  AnnotationValueLua.h  AnnotationValuePtr.h  AnnotationValueTest.cpp  AnnotationValueTypeException.h  AttributeTableLua.cpp  Axiom.cpp  Axiom.h  Axiom.mcpp  AxiomLua.cpp  AxiomLua.h  AxiomPtr.h  Block.cpp  Block.h  BlockLua.cpp  BlockLua.h  BlockPtr.h  Context.cpp  Context.h  Context.lh  Context.mcpp  ContextLua.cpp  ContextLua.h  ContextPtr.h  ContextPtr.mcpp  CvQualifier.mcpp  Element.mcpp  ElementLua.cpp  (+57 more)
Main/App/Source/main/mcpp/Macaroni/Model/Cpp/: Access.mcpp  AccessLua.cpp  AccessLua.h  AccessPtr.h  Class.cpp  Class.h  Class.mcpp  ClassLua.cpp  ClassLua.h  ClassParent.cpp  ClassParent.h  ClassParent.mcpp  ClassParentListLuaMetaData.cpp  ClassParentListLuaMetaData.h  ClassParentPtr.h  ClassPtr.h  CodeGraphPtr.mcpp  Constructor.cpp  Constructor.h  Constructor.mcpp  ConstructorLua.cpp  ConstructorLua.h  ConstructorOverload.cpp  ConstructorOverload.h  ConstructorOverload.mcpp  ConstructorOverloadLua.cpp  ConstructorOverloadLua.h  ConstructorOverloadPtr.h  ConstructorPtr.h  CppContext.cpp  CppContext.h  CppContext.mcpp  (+59 more)
Main/App/Source/main/mcpp/Macaroni/Parser/: MacaroniAxioms.mcpp  Parser.h  Parser.mcpp  ParserException.h  ParserException.mcpp  ParserExceptionLua.cpp  ParserExceptionLua.h  ParserExceptionPtr.h  ParserFactory.h  ParserInputException.h  ParserLua.cpp  ParserLua.h  ParserPtr.h  TextIterator.mcpp
Main/App/Source/main/mcpp/Macaroni/Platform/: EnvironmentVariable.mcpp  EnvironmentVariables.mcpp  FileTime.cpp  FileTime.h
Main/App/Source/main/pureCppExtraFiles/: ReadMe.txt  jamroot.jam
Main/App/Source/main/resources/: Macaroni.rc  Macaroni.rc2  Messages.txt
Main/App/Source/test/lua/: Tests.lua
Main/App/Source/test/lua/Macaroni/: Test.lua
Main/App/Source/test/lua/Macaroni/Model/: AnnotationTests.lua  AxiomTests.lua  ContextTests.lua  FileNameTests.lua  MemberTests.lua  NodeListTests.lua  NodeTests.lua  ReasonTests.lua  SourceTests.lua  TypeArgumentListTests.lua  TypeArgumentTests.lua  TypeListTests.lua  TypeTests.lua
Main/App/Source/test/mcpp/Macaroni/IO/: GeneratedFileWriterTest.cpp
Main/App/Source/test/mcpp/Macaroni/Model/: AnnotationValueTest.cpp  ContextTests.cpp  NodeTest.cpp
(+1404 files in other folders)
